# ai_leader

./: .gitignore  .pre-commit-config.yaml  README.md  notebook_phase3.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: module_3_3_guide.md  module_3_3_notebook_a.md  module_3_3_notebook_b.md
notebooks/: 3_3_run_evaluations_quality_safety_cost.ipynb  notebook_a.ipynb  notebook_b.ipynb
scripts/: run_notebook_ci.py  smoke_evaluation.py
src/ai_leader/: __init__.py  ablation.py  annotation.py  cli.py  clients.py  config.py  data.py  decision.py  evaluation.py  experiments.py  notebook_a_selection.py  phase3_lab.py  prompts.py  reporting.py  schemas.py
tests/: test_cli.py  test_data.py  test_evaluation.py  test_experiments.py  test_notebook_a_selection.py  test_prompts.py  test_reporting.py
tests/fixtures/: routing_eval_sample.csv  routing_eval_sample_small.csv
