[project]
name = "ai-leader"
version = "0.1.0"
description = "Materials and exercises for the AI Leader course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openai>=1.0",
    "pandas>=2.0",
    "pandas-stubs>=2.0",
    "pre-commit>=4.0",
    "pydantic>=2.0",
    "ruff>=0.8",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.uv]
package = false
