[project]
name = "ai-leader"
version = "0.1.0"
description = "Materials and exercises for the AI Leader course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openai>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.0",
    "ipykernel>=6.29",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "nbclient>=0.10",
    "pandas-stubs>=2.0",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.8",
]

[project.scripts]
ai-leader = "ai_leader.cli:run"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_leader"]
